# padelvision

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  stereo_params.yml
ball_tracker/: ball_tracker.py
padelvision/: __init__.py  cli.py  config.py
padelvision/calibration/: __init__.py  capture.py  stereo.py
padelvision/detection/: __init__.py  tracker.py  tracknet.py
padelvision/geometry/: __init__.py  court.py  triangulation.py
padelvision/viz/: __init__.py  plotting.py
tests/: test_capture.py  test_config.py  test_court.py  test_detection.py  test_triangulation.py
triangulate_ball/: visualize.py
triangulate_ball/calibrate_camera/: stereo_calibration.py
vision/ball_tracker/: __init__.py
vision/triangulate_ball/: padel_court_model.py  triangulate.py
vision/triangulate_ball/calibrate_camera/: calibrate_camera_2.py  capture_photos.py
